--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <section> 
     <header>
-        <a href="#"> <img src="#" class="logo">  </a>
+        <a href="#"> <img src="imagens/cosmetics.png" class="logo">  </a>
              <ul>
                 <li> <a href="#" class="menu-itens">Home</a> </li>
                 <li> <a href="#" class="menu-itens">Sobre</a> </li>
@@ -37,7 +37,7 @@
         </div> <!-- TEXTBOX-->
 
         <div class="img-box">
-            <img src="#">
+            <img src="imagens/makeup.png">
         </div><!--IMG-BOX-->
 
 
