Animações e finalizações de CSS e HTML
Animações e cores atualizadas no CSS
Adição de algumas divs no HTML
Uso efetivo das imagens baixadas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 
 
 <body>
-   <section> 
+   <section>
+
+
+    
+       
+    <div class="circle">
+
+    </div><!-- circle! -->
+
+
+
+
     <header>
         <a href="#"> <img src="imagens/cosmetics.png" class="logo">  </a>
              <ul>
@@ -43,7 +54,11 @@
 
     </div> <!-- Content-->
 
-
+    <ul class="thumb"> 
+        <li> <img src="imagens/makeup.png"> </li>
+        <li> <img src="imagens/makeup2.png"> </li>
+        <li> <img src="imagens/makeup3.png"> </li>
+    </ul>
 
    </section>
 </body>
